# podman-monitor

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  test_logger.py
.github/workflows/: docker-release.yml
routes/: api_routes.py  web_routes.py
services/: container_service.py  logger_service.py  podman_service.py
templates/: container.html  containers.html  image.html  images.html  index.html
